# pynvim-python

./: README.md  pyproject.toml
src/pynvim_python/: __init__.py
