[project]
name = "pynvim-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael Henry", email = "drmikehenry@drmikehenry.com" }
]
requires-python = ">=3.7"
dependencies = [
    "pynvim>=0.5.2",
]

[project.scripts]
pynvim-python = "pynvim_python:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
